# crypto-developer-knowledge-graph

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  render.yaml  thoughts.md
data/: chunks.json  citations.json  goal_paths.json  live_metadata.json  network_conditions.json  nodes.json  operational_playbooks.json  protocol_release_sources.json  relationships.json  serialization_sandboxes.json  sources.json  trust_report.json  upstream_feeds.json
data/exports/: code_snippets.jsonl  document_chunks.jsonl  edges.jsonl  nodes.jsonl
docs/: database.md  semantic-api.md
docs/sources/: avalanche-staking-docs.md  aws-kms-asymmetric-key-specs.md  aws-kms-sign-api.md  bitcoin-core-rpc.md  bitcoin-sendrawtransaction.md  certora-prover-docs.md  eip-155.md  eip-20.md  eip-721.md  ethereum-json-rpc.md  ethereum-rlp.md  filecoin-message-signing.md  foundry-invariant-testing.md  halmos-symbolic-testing.md  json-rpc-spec.md  polkadot-staking-docs.md  polkadot-transaction-construction.md  solana-rpc.md  solidity-abi.md  substrate-scale-codec.md  turnkey-sign-raw-payload.md
frontend/: app.js  data.js  graph_view.js  index.html  node_detail.js  sandboxes.js  serialization_sandbox.js  state.js  styles.css  trace_builder.js
schemas/: graph.schema.json
scripts/: crawl_protocol_releases.py  validate_graph.py
skills/: SKILLS.md
skills/crypto-trace/: SKILL.md
skills/live-metadata-verification/: SKILL.md
skills/offline-transaction-signing/: SKILL.md
src/ckg/: __init__.py  api.py  cli.py  ingest.py  live_metadata.py  network_conditions.py  (+7 more)
tests/: test_graph.py
(+8 files in other folders)
