[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-developer-knowledge-graph"
version = "0.1.0"
description = "Developer-first crypto knowledge graph organized around build goals."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
crypto-graph = "ckg.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
